--- a/EQ/EQCommunicationsViewController.xib
+++ b/EQ/EQCommunicationsViewController.xib
@@ -43,7 +43,7 @@
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIView" id="343100677">
 						<reference key="NSNextResponder" ref="935841298"/>
-						<int key="NSvFlags">274</int>
+						<int key="NSvFlags">292</int>
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUIImageView" id="369298690">
 								<reference key="NSNextResponder" ref="343100677"/>
@@ -241,6 +241,7 @@
 								<string key="NSFrame">{{724, 7}, {35, 30}}</string>
 								<reference key="NSSuperview" ref="343100677"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="226150323"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -348,11 +349,8 @@
 						<reference key="NSNextKeyView" ref="369298690"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MQA</bytes>
-							<object class="NSColorSpace" key="NSCustomColorSpace" id="292877037">
-								<int key="NSID">2</int>
-							</object>
+							<int key="NSColorSpace">2</int>
+							<bytes key="NSRGB">MC4wMTE3NjQ3MDcwNCAwLjIwMDAwMDAxNzkgMC4zNjA3ODQzMjIAA</bytes>
 						</object>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 					</object>
@@ -362,10 +360,11 @@
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUIImageView" id="794707150">
 								<reference key="NSNextResponder" ref="226150323"/>
-								<int key="NSvFlags">274</int>
-								<string key="NSFrameSize">{768, 44}</string>
+								<int key="NSvFlags">310</int>
+								<string key="NSFrameSize">{768, 45}</string>
 								<reference key="NSSuperview" ref="226150323"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="40550137"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -380,6 +379,7 @@
 								<string key="NSFrame">{{0, 11}, {301, 21}}</string>
 								<reference key="NSSuperview" ref="226150323"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="73356019"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -414,6 +414,7 @@
 								<string key="NSFrame">{{468, 11}, {136, 21}}</string>
 								<reference key="NSSuperview" ref="226150323"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="749397806"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -435,7 +436,7 @@
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 						</array>
-						<string key="NSFrame">{{0, 44}, {768, 44}}</string>
+						<string key="NSFrame">{{0, 44}, {768, 45}}</string>
 						<reference key="NSSuperview" ref="935841298"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="794707150"/>
@@ -443,7 +444,9 @@
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
-							<reference key="NSCustomColorSpace" ref="292877037"/>
+							<object class="NSColorSpace" key="NSCustomColorSpace" id="292877037">
+								<int key="NSID">2</int>
+							</object>
 						</object>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 					</object>
@@ -454,10 +457,10 @@
 							<object class="IBUITableView" id="492106834">
 								<reference key="NSNextResponder" ref="749397806"/>
 								<int key="NSvFlags">274</int>
-								<string key="NSFrame">{{0, 44}, {300, 771}}</string>
+								<string key="NSFrame">{{0, 44}, {300, 780}}</string>
 								<reference key="NSSuperview" ref="749397806"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="717830939"/>
+								<reference key="NSNextKeyView" ref="506285743"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="93838376"/>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -498,6 +501,7 @@
 												<string key="NSFrame">{{20, 0}, {428, 114}}</string>
 												<reference key="NSSuperview" ref="400735092"/>
 												<reference key="NSWindow"/>
+												<reference key="NSNextKeyView" ref="68538830"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<bool key="IBUIOpaque">NO</bool>
 												<bool key="IBUIClipsSubviews">YES</bool>
@@ -529,6 +533,7 @@
 												<string key="NSFrame">{{20, 122}, {248, 21}}</string>
 												<reference key="NSSuperview" ref="400735092"/>
 												<reference key="NSWindow"/>
+												<reference key="NSNextKeyView" ref="135034958"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<bool key="IBUIOpaque">NO</bool>
 												<bool key="IBUIClipsSubviews">YES</bool>
@@ -561,6 +566,7 @@
 												<string key="NSFrame">{{0, 147}, {468, 2}}</string>
 												<reference key="NSSuperview" ref="400735092"/>
 												<reference key="NSWindow"/>
+												<reference key="NSNextKeyView" ref="778968158"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<reference key="IBUIBackgroundColor" ref="275203199"/>
 												<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -569,6 +575,7 @@
 										<string key="NSFrameSize">{468, 150}</string>
 										<reference key="NSSuperview" ref="716093288"/>
 										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="701294885"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
 											<int key="NSColorSpace">3</int>
@@ -582,6 +589,7 @@
 										<string key="NSFrame">{{20, 158}, {428, 655}}</string>
 										<reference key="NSSuperview" ref="716093288"/>
 										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="717830939"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<reference key="IBUIBackgroundColor" ref="20076216"/>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -606,9 +614,10 @@
 										</object>
 									</object>
 								</array>
-								<string key="NSFrame">{{300, 0}, {468, 815}}</string>
+								<string key="NSFrame">{{300, 0}, {468, 824}}</string>
 								<reference key="NSSuperview" ref="749397806"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="400735092"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
@@ -620,9 +629,10 @@
 							<object class="IBUISegmentedControl" id="506285743">
 								<reference key="NSNextResponder" ref="749397806"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{0, 814}, {768, 44}}</string>
+								<string key="NSFrame">{{0, 824}, {768, 44}}</string>
 								<reference key="NSSuperview" ref="749397806"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="716093288"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -665,7 +675,7 @@
 					<object class="IBUIView" id="717830939">
 						<reference key="NSNextResponder" ref="935841298"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{300, 44}, {2, 858}}</string>
+						<string key="NSFrame">{{300, 44}, {2, 869}}</string>
 						<reference key="NSSuperview" ref="935841298"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -676,11 +686,10 @@
 				<string key="NSFrame">{{0, 20}, {768, 1004}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView"/>
+				<reference key="NSNextKeyView" ref="343100677"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
-					<int key="NSColorSpace">3</int>
-					<bytes key="NSWhite">MQA</bytes>
-					<reference key="NSCustomColorSpace" ref="292877037"/>
+					<int key="NSColorSpace">2</int>
+					<bytes key="NSRGB">MC4wMTE3NjQ3MDcwNCAwLjIwMDAwMDAxNzkgMC4zNjA3ODQzMjIAA</bytes>
 				</object>
 				<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics">
